# ocr-service

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Dockerfile.ml_service  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: config.py  main.py
app/api/: inference.py  routes.py  ui_routes.py
app/cache/: redis_client.py
app/database/: mongodb.py
app/image/: transforms.py
app/kafka/: consumer.py  consumer_entrypoint.py  producer.py  serializers.py
app/models/: schemas.py
app/observability/: metrics.py  tracing.py
app/orchestration/: __init__.py  service.py
app/storage/: __init__.py  adls.py  base.py  gcs.py  local.py  s3.py
config/: aws.yaml  azure.yaml  gcp.yaml  local.yaml
k8s/: consumer-deployment.yaml  keda-scaledobject.yaml
ml_service/: main.py  model.py
monitoring/: otel-collector-config.yaml  prometheus.yml
monitoring/grafana/: datasources.yml
monitoring/grafana/dashboards/: dashboards.yml  ocr_service.json
proto/: __init__.py  ocr_image.proto
terraform/: ecr.tf  eks.tf  helm.tf  k8s-config.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  vpc.tf
tests/: conftest.py  test_api.py  test_cache.py  test_idempotency_and_circuit_breaker.py  test_storage.py  test_transforms.py
