[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "ocr-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Core framework
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "python-multipart==0.0.22",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "PyYAML==6.0.1",
    # Kafka
    "confluent-kafka==2.4.0",
    # MongoDB
    "motor==3.4.0",
    "pymongo==4.7.2",
    # Redis
    "redis==5.0.4",
    # Image processing
    "Pillow==12.1.1",
    "numpy==1.26.4",
    # OCR
    "pytesseract==0.3.13",
    # HTTP client
    "httpx==0.27.0",
    "tenacity==9.1.4",
    # OpenTelemetry
    "opentelemetry-api==1.29.0",
    "opentelemetry-sdk==1.29.0",
    "opentelemetry-instrumentation-fastapi==0.50b0",
    "opentelemetry-instrumentation-httpx==0.50b0",
    "opentelemetry-instrumentation-redis==0.50b0",
    "opentelemetry-exporter-otlp-proto-grpc==1.29.0",
    # Prometheus
    "prometheus-client==0.20.0",
    "prometheus-fastapi-instrumentator==7.0.0",
    # Cloud SDKs
    "boto3==1.34.88",
    "google-cloud-storage==2.16.0",
    "azure-storage-blob==12.19.1",
    "azure-identity==1.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "pytest-mock==3.14.0",
    "httpx==0.27.0",
    "pytest-cov==5.0.0",
    "fakeredis==2.23.0",
    "mongomock-motor==0.0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
